--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@ body { padding-top: 64px; }
   ul{list-style:none;padding:0;margin-top:10px;color:var(--muted);font-size:15px;}
   ul li{margin:6px 0;}
   .note{font-size:12px;color:var(--muted);margin-top:14px;}
-</style>/* Seta animada apontando para o botão fixo */
+</style>
 
-}
+
 
 </head>
 <body>
